# ChangeLog for sys-cluster/gnbd-headers
# Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/gnbd-headers/ChangeLog,v 1.4 2005/10/08 15:48:46 xmerlin Exp $

*gnbd-headers-1.01.00 (08 Oct 2005)

  08 Oct 2005; Christian Zoffoli <xmerlin@gentoo.org>
  gnbd-headers-1.00.00.ebuild, +gnbd-headers-1.01.00.ebuild:
  ebuild cleanup. New version.

  05 Sep 2005; Christian Zoffoli <xmerlin@gentoo.org>
  gnbd-headers-1.00.00.ebuild:
  last minute fixes.

  05 Sep 2005; Christian Zoffoli <xmerlin@gentoo.org>
  gnbd-headers-1.00.00.ebuild:
  fixed wrong dep.

*gnbd-headers-1.00.00 (05 Sep 2005)

  05 Sep 2005; Christian Zoffoli <xmerlin@gentoo.org> +metadata.xml,
  +gnbd-headers-1.00.00.ebuild:
  splitting headers from kernel ebuilds.
