@@ -1,6 +1,10 @@
 # ChangeLog for sys-cluster/gnbd-headers
 # Copyright 1999-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-cluster/gnbd-headers/ChangeLog,v 1.4 2005/10/08 15:48:46 xmerlin Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-cluster/gnbd-headers/ChangeLog,v 1.5 2005/11/17 01:58:03 xmerlin Exp $
+
+  17 Nov 2005; Christian Zoffoli <xmerlin@gentoo.org>
+  gnbd-headers-1.00.00.ebuild, gnbd-headers-1.01.00.ebuild:
+  DEPEND fix.
 
 *gnbd-headers-1.01.00 (08 Oct 2005)
 
